--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
-                <version>1.9.23</version>
+                <version>2.0.0</version>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -73,6 +73,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-coroutines-core-jvm</artifactId>
+            <version>1.10.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.10.0</version>
@@ -81,7 +86,29 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>1.9.23</version>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.evanrupert</groupId>
+            <artifactId>excelkt</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <!-- https://mavenlibs.com/maven/dependency/com.squareup.okhttp3/okhttp -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>5.0.0-alpha.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <!-- https://mavenlibs.com/maven/dependency/com.squareup.okhttp3/okhttp-coroutines -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp-coroutines</artifactId>
+            <version>5.0.0-alpha.12</version>
         </dependency>
     </dependencies>
 
